@@ -341,18 +341,18 @@ This option applies to newly stored pages and whenever a file index should be
 saved. Existing pages are not re-compressed on compression change.</p>
 <p>The <i class="arg">-compression</i> option accepts a compression method and an optional
 compression level, separated by a colon character (<b class="const">:</b>). The compression
-level must be an unsigned integer in the range of 0 to 255. Different compression
+level must be an integer in the range of -1 to 255. Different compression
 methods define the compression level differently. However, it is safe to specify
 a compression level that is lower or higher than what is supported by
 a particular method. In these cases, the minimum or maximum level will be used
 according to the specific compression method. This means that it is possible
 and safe to specify level 255 for any method, and the maximum level
 will be used.</p>
-<p>By default, if no compression level is specified or is an empty string,
-the maximum compression level will be used for the chosen compression method.</p>
+<p>If no compression level is specified, or it is an empty string or -1, then
+the default level value specific to the chosen compression method will be used.</p>
 <p>For example:</p>
 <pre class="doctools_example">
-# This will mount an archive with the zlib compression method and with default level (9)
+# This will mount an archive with the zlib compression method and with default level (6)
 cookfs::Mount archive archive -compression zlib
 # This will mount an archive with the lzma compression method and with compression level 3
 cookfs::Mount archive archive -compression lzma:3
@@ -366,16 +366,19 @@ no compression is used at all; mainly used for testing purposes or when
 content should not be packed at all. The compression level is ignored in this case.</p></li>
 <li><p><b class="const">zlib</b> -
 use zlib compression to compress - same as with mk4vfs and zipvfs. Compression levels
-can be from 0 to 9.</p></li>
+can be from 1 to 9. The default compression level is 6.</p></li>
 <li><p><b class="const">bz2</b> -
 use bzip2 for compression; requires specifying <b class="const">--enable-bz2</b> when building
-cookfs. Compression levels can be from 1 to 9.</p></li>
+cookfs. Compression levels can be from 1 to 9. The default compression level is 9.
+The compression level for this method means the block size and is counted as
+the level multiplied by 100k bytes. The default compression level of 9 corresponds
+to a block size of 900 KB.</p></li>
 <li><p><b class="const">lzma</b> -
 use lzma for compression; requires specifying <b class="const">--enable-lzma</b> when building
-cookfs. Compression levels can be from 0 to 9.</p></li>
+cookfs. Compression levels can be from 0 to 9. The default compression level is 5.</p></li>
 <li><p><b class="const">zstd</b> -
 use Zstandard for compression; requires specifying <b class="const">--enable-zstd</b> when building
-cookfs. Compression levels can be from 1 to 22.</p></li>
+cookfs. Compression levels can be from 1 to 22. The default compression level is 3.</p></li>
 <li><p><b class="const">custom</b> -
 use Tcl commands for compressing and decompressing pages. The compression level
 is ignored in this case.</p></li>
