@@ -15,8 +15,8 @@ extern const int cookfsCompressionOptionMap[];
 #define COOKFS_COMPRESSION_BZ2       2
 #define COOKFS_COMPRESSION_LZMA      3
 #define COOKFS_COMPRESSION_ZSTD      4
-#define COOKFS_COMPRESSION_CUSTOM  255
-#define COOKFS_COMPRESSION_ANY     256
+#define COOKFS_COMPRESSION_CUSTOM   14
+#define COOKFS_COMPRESSION_ANY      15
 
 enum {
     cookfsCompressionOptNone,
